// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/npm/extract .extractPackageFile() uses lerna package settings 1`] = `
Array [
  Object {
    "internalPackages": Array [
      "@org/a",
      "@org/b",
    ],
    "lernaDir": ".",
    "lernaPackages": Array [
      "packages/*",
    ],
    "packageFile": "package.json",
  },
  Object {
    "internalPackages": Array [
      "@org/b",
    ],
    "lernaClient": undefined,
    "lernaDir": ".",
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "yarnLock": undefined,
  },
  Object {
    "internalPackages": Array [
      "@org/a",
    ],
    "lernaClient": undefined,
    "lernaDir": ".",
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses yarn workspaces package settings 1`] = `
Array [
  Object {
    "internalPackages": Array [
      "@org/a",
      "@org/b",
    ],
    "lernaClient": "yarn",
    "lernaDir": ".",
    "lernaPackages": Array [
      "oldpackages/*",
    ],
    "packageFile": "package.json",
    "yarnWorkspacesPackages": Array [
      "packages/*",
    ],
  },
  Object {
    "internalPackages": Array [
      "@org/b",
    ],
    "lernaClient": "yarn",
    "lernaDir": ".",
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "yarnLock": undefined,
  },
  Object {
    "internalPackages": Array [
      "@org/a",
    ],
    "lernaClient": "yarn",
    "lernaDir": ".",
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "yarnLock": undefined,
  },
]
`;

exports[`manager/npm/extract .extractPackageFile() uses yarn workspaces package settings 2`] = `
Array [
  Object {
    "internalPackages": Array [
      "@org/a",
      "@org/b",
    ],
    "packageFile": "package.json",
    "yarnWorkspacesPackages": "packages/*",
  },
  Object {
    "hasYarnWorkspaces": true,
    "internalPackages": Array [
      "@org/b",
    ],
    "lernaClient": undefined,
    "lernaDir": undefined,
    "npmLock": undefined,
    "packageFile": "packages/a/package.json",
    "packageJsonName": "@org/a",
    "yarnLock": true,
  },
  Object {
    "internalPackages": Array [
      "@org/a",
    ],
    "lernaClient": undefined,
    "lernaDir": undefined,
    "npmLock": undefined,
    "packageFile": "packages/b/package.json",
    "packageJsonName": "@org/b",
    "yarnLock": undefined,
  },
]
`;
